Fix duplicate Save file path.